# bayesprompt

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
bayesprompt/configs/: default.yaml  external_ct_mri.yaml  internal_us_mri.yaml
bayesprompt/core/: __init__.py  checkpointing.py  config.py  decorators.py  registry.py  reproducibility.py
bayesprompt/datasets/: __init__.py  base.py  fewshot.py  medical_segmentation.py
bayesprompt/evaluation/: __init__.py  build_tables.py  check_baselines.py  efficiency_report.py  evaluator.py  metrics.py
bayesprompt/experiments/: __init__.py  experiment_runner.py  run_ablation.py  run_cleanup.py  run_crossmodality.py  run_evaluation.py  run_iteration_sensitivity.py  run_reproduce.py  run_source_training.py  run_tables.py  run_target_adaptation.py  run_unlabeled_prompt_update.py  run_visualization.py
bayesprompt/losses/: __init__.py  bayesian.py  calibration.py  segmentation.py
bayesprompt/models/: __init__.py  attention_injection.py  baselines.py  bayesian_head.py  bayesprompt.py  decoder_adapter.py  prompt_module.py  sam2_wrapper.py  uncertainty.py
bayesprompt/models/baselines/: __init__.py  nnunet_wrapper.py  unet.py
bayesprompt/training/: __init__.py  source_trainer.py  target_adapter.py
bayesprompt/visualization/: __init__.py  qualitative.py  qualitative_grid.py  uncertainty.py
docs/: BASELINES.md  DATASETS.md  RELEASE_NOTES.md  REPRODUCIBILITY.md
examples/splits/: example_splits.json
tests/: test_baseline_coverage.py  test_split_validation.py  test_table_builder.py
(+1 files in other folders)
